feat: #72 implement accept-terms endpoint
